
[package]
name = "find-cargo-toml"
version = "0.1.0"
authors = ["Andrew Grangaard <granny-github@ofb.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/user/spazm/find-config-toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.5"
serde = "*"
error-chain = "*"
